<resources>
    <string name="app_name">Laboratorio_06</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billboard_title">Billboard</string>
    <string name="new_movie_title">New Movie</string>
    <string name="hint_name">Name</string>
    <string name="hint_category">Category</string>
    <string name="hint_description">Description</string>
    <string name="hint_qualification">Calification</string>
    <string name="btn_submit">Submit</string>
    <string name="star_wars_3_title">Star Wars episode 3: La venganza de los Sith</string>
    <string name="star_wars_3_calification">9.8</string>
    <string name="harrypotter_2_title">Harry Potter y la Piedra Filosofal</string>
    <string name="harrypotter_2_calification">9.5</string>
    <string name="starwars_description">La película se centra en el personaje de Anakin Skywalker, quien está siendo tentado por el Lado Oscuro de la Fuerza mientras el imperio Faláctico comeinza a surgir. La trama también muestra la caída de la República Galáctica y el ascenso del Emperador Palpatine</string>
    <string name="text_ciencia_ficcion">Ciencia Ficcion</string>
    <string name="text_desc_star_wars_movie_pic">star_wars_movie_pic</string>
</resources>