<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.laboratorio_06.ui.movie.MovieViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLayout"
        tools:context=".ui.movie.NewMovieFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_gap"
            android:gravity="center"
            android:text="@string/new_movie_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_gap"
            android:layout_marginEnd="@dimen/small_gap"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xlarge_gap"
                android:layout_margin="@dimen/regular_gap"
                android:background="@color/cardLayout"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:padding="@dimen/regular_gap"
                android:text="@={viewmodel.name}"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xlarge_gap"
                android:layout_margin="@dimen/regular_gap"
                android:background="@color/cardLayout"
                android:hint="@string/hint_category"
                android:inputType="text"
                android:padding="@dimen/regular_gap"
                android:text="@={viewmodel.category}"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xlarge_gap"
                android:layout_margin="@dimen/regular_gap"
                android:background="@color/cardLayout"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:padding="@dimen/regular_gap"
                android:text="@={viewmodel.description}"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_qualification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/xlarge_gap"
                android:layout_margin="@dimen/regular_gap"
                android:background="@color/cardLayout"
                android:hint="@string/hint_qualification"
                android:inputType="text"
                android:padding="@dimen/regular_gap"
                android:text="@={viewmodel.qualification}"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:onClick="@{()-> viewmodel.createMovie()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/btn_submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>

